add build status badge

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+[![Build Status](https://secure.travis-ci.org/pettazz/JACKED.png)](https://secure.travis-ci.org/pettazz/JACKED.png)
+
 JACKED is pretty cool dude. eh makes websites run real good and doesn't afraid of anything.
 
 I'll update this never^H^H^H^H^Hsomeday.
